# prism

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
agents/: __init__.py  base.py  code_reviewer.py  security_scanner.py
examples/: manual_review.py  webhook_test.py
prism/: __init__.py  analyzer.py  app.py  config.py  github_client.py  models.py  prompts.py  reviewer.py
tests/: __init__.py  test_analyzer.py  test_github_client.py  test_reviewer.py
